@@ -16,16 +16,7 @@ public enum Role {
 
   USER(Collections.emptySet()),
   ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE,
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
+          Collections.emptySet()
   );
 
   @Getter
